# mcp251x_pico

./: .gitignore  CMakeLists.txt  README.md  todo.md
examples/example1/: CMakeLists.txt  main.c
examples/read_frames/: CMakeLists.txt  main.c
examples/send_frame/: CMakeLists.txt  main.c
include/mcp251x/: can.h  mcp251x.h
include/mcp251x/platform/: sleep.h  spi.h
src/: mcp251x.c
src/platform/: sleep_pico.c  spi.c
